--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,10 @@ body {
 
 .header {
     background-color: aquamarine;
-    width: 100%;
     display: flex;
     justify-content: space-between;
-    height: 80px;
+    height: 60px;
+    width: 100%;
     align-items: center;
     padding: 15px;
     margin: 0px 0;
@@ -302,12 +302,14 @@ button:hover {
 }
 
 .face {
-    margin-top: 30px;
-    width: 100%;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    width: 80%;
 }
 
 .face img {
     width: 100%;
+    height: 600px;
 }
 
 .footer {
@@ -465,11 +467,15 @@ button:hover {
         float: left;
         position: relative;
         max-width: 540px;
+        height: 300px;
         margin-bottom: 20px;
         animation-name: slide;
         animation-duration: 10s;
         animation-iteration-count: infinite;
         transition-duration: 2s;
+    }
+    .face img {
+        height: 400px;
     }
     .header {
         background-color: aquamarine;
@@ -499,19 +505,29 @@ button:hover {
         position: relative;
         max-width: 540px;
         margin-bottom: 20px;
+        height: 300px;
         animation-name: slide;
         animation-duration: 10s;
         animation-iteration-count: infinite;
         transition-duration: 2s;
     }
+    .face img {
+        width: 100%;
+        height: 419px;
+    }
 }
 
 @media(min-width: 1024px) {
+    .face img {
+        width: 100%;
+        height: 419px;
+    }
     .img-slider {
         display: flex;
         float: left;
         position: relative;
         max-width: 1024px;
+        height: 300px;
         margin-bottom: 20px;
         animation-name: slide;
         animation-duration: 10s;
@@ -544,6 +560,7 @@ button:hover {
     .img-slider {
         display: flex;
         float: left;
+        height: 300px;
         position: relative;
         width: 414px;
         margin-bottom: 20px;
@@ -555,6 +572,10 @@ button:hover {
     .face {
         margin-top: 47px;
         width: 100%;
+        height: 300px;
+    }
+    .face img {
+        height: 300px;
     }
     .sidbar {
         right: 5px;
@@ -567,9 +588,12 @@ button:hover {
         margin-left: 20px;
         text-align: center;
         padding: 10px;
-        -webkit-border-radius: ;
+        -webkit-border-radius: 8px;
         max-height: 195px;
         overflow: scroll;
+        -moz-border-radius: 8px;
+        -ms-border-radius: 8px;
+        -o-border-radius: 8px;
     }
     .header {
         background-color: aquamarine;
@@ -592,6 +616,7 @@ button:hover {
         float: left;
         position: relative;
         width: 375px;
+        height: 299px;
         margin-bottom: 20px;
         animation-name: slide;
         animation-duration: 10s;
@@ -601,6 +626,10 @@ button:hover {
     .face {
         margin-top: 53px;
         width: 100%;
+        height: 200px;
+    }
+    .face img {
+        height: 200px;
     }
     .header {
         background-color: aquamarine;
@@ -632,6 +661,10 @@ button:hover {
         padding: 10px;
         max-height: 249px;
         overflow: scroll;
+        -webkit-border-radius: ;
+        -moz-border-radius: ;
+        -ms-border-radius: ;
+        -o-border-radius: ;
     }
     #root {
         width: 80%;
@@ -671,6 +704,10 @@ button:hover {
         border-radius: 3px;
         width: 80px;
         cursor: pointer;
+        -webkit-border-radius: ;
+        -moz-border-radius: ;
+        -ms-border-radius: ;
+        -o-border-radius: ;
     }
     .header .logo {
         font-size: 20px;
